DLS-13106 Upgrade play-frontend-hmrc to 13.6.0 and fix IntegrationTest deprecation warnings